try to make Travis CI work again

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,7 @@
 language: csharp
-solution: CardGameEngine.csproj
+dist: trusty
+sudo: required
+mono: none
+dotnet: 1.0.1
+script:
+  - ./build_travis.sh --quiet verify
