--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,11 +2,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": ".NET Core Launch (console)",
+            "name": "Launch (console)",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceRoot}/src/bin/Debug/netcoreapp2.0/CardGameEngine.dll",
+            "program": "${workspaceRoot}/CardGameEngine/bin/Debug/netcoreapp2.0/CardGameEngine.dll",
             "args": [],
             "cwd": "${workspaceRoot}",
             "stopAtEntry": false,
