--- a/CardGameEngine/CardGameEngine.csproj
+++ b/CardGameEngine/CardGameEngine.csproj
@@ -1,6 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
+    <PropertyGroup Condition="'$(CONFIG)'=='DEBUG'">
+        <DefineConstants>DEBUG</DefineConstants>
+    </PropertyGroup>
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
+        <OutputType>library</OutputType>
         <TargetFramework>netcoreapp2.0</TargetFramework>
     </PropertyGroup>
 </Project>
