--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,4 +9,10 @@ build:
 test:
   stage: test
   script:
-    - 'dotnet test AnalogGameEngine.Tests'
+    - 'dotnet test AnalogGameEngine.Tests /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput="./OpenCover/"'
+coverage:
+  stage: coverage
+  script:
+    - 'curl -s https://codecov.io/bash > codecov'
+    - 'chmod +x codecov'
+    - './codecov -f "OpenCover/coverage.xml" -t $CODECOV_TOKEN'
