--- a/AnalogGameEngine/AnalogGameEngine.csproj
+++ b/AnalogGameEngine/AnalogGameEngine.csproj
@@ -7,4 +7,8 @@
   </PropertyGroup>
   <ItemGroup>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="OpenTK.NETCore" Version="*" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0006" />
+  </ItemGroup>
 </Project>
