--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,15 +2,15 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch (console)",
+            "name": "MauMauPrototype",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build",
-            "program": "${workspaceRoot}/AnalogGameEngine/bin/Debug/netcoreapp2.0/AnalogGameEngine.dll",
+            "preLaunchTask": "buildMauMau",
+            "program": "${workspaceRoot}/MauMauPrototype/bin/Debug/netcoreapp2.2/MauMauPrototype.dll",
             "args": [],
             "cwd": "${workspaceRoot}",
             "stopAtEntry": false,
-            "console": "internalConsole"
+            "console": "integratedTerminal"
         }
     ]
 }
