--- a/.editorconfig
+++ b/.editorconfig
@@ -11,5 +11,8 @@ trim_trailing_whitespace = true
 [*.md]
 trim_trailing_whitespace = false
 
+[*.yml]
+indent_size = 2
+
 [*.csproj]
 indent_size = 2
