--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,8 @@ image: microsoft/dotnet
 stages:
   - build
   - test
-  - buildPrototypes
+  - code_quality
+  - build_prototypes
 build:
   stage: build
   script:
@@ -21,7 +22,25 @@ test:
     #- 'curl -Ls https://github.com/codacy/codacy-coverage-reporter/releases/download/4.0.5/codacy-coverage-reporter-4.0.5-assembly.jar > codacy-coverage-reporter.jar'
     #- 'chmod +x codacy-coverage-reporter.jar'
     #- 'java -jar ./codacy-coverage-reporter.jar report -l CSharp --force-language -r "Coverage/coverage.cobertura.xml" -t $CODACY_TOKEN'
+code_quality:
+  stage: code_quality
+  image: docker:stable
+  variables:
+    DOCKER_DRIVER: overlay2
+  allow_failure: true
+  services:
+    - docker:stable-dind
+  script:
+    - export SP_VERSION=$(echo "$CI_SERVER_VERSION" | sed 's/^\([0-9]*\)\.\([0-9]*\).*/\1-\2-stable/')
+    - docker run
+        --env SOURCE_CODE="$PWD"
+        --volume "$PWD":/code
+        --volume /var/run/docker.sock:/var/run/docker.sock
+        "registry.gitlab.com/gitlab-org/security-products/codequality:$SP_VERSION" /code
+  artifacts:
+    reports:
+      codequality: gl-code-quality-report.json
 buildMauMau:
-  stage: buildPrototypes
+  stage: build_prototypes
   script:
     - 'dotnet build MauMauPrototype'
