restructure to make coverage work again with fail test

--- a/MauMauPrototype/MauMauPrototype.csproj
+++ b/MauMauPrototype/MauMauPrototype.csproj
@@ -5,6 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../AnalogGameEngine/AnalogGameEngine.csproj" />
+    <ProjectReference Include="../AnalogGameEngine.SimpleGUI/AnalogGameEngine.SimpleGUI.csproj" />
   </ItemGroup>
 </Project>
