--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ build:
 test:
   stage: test
   script:
-    - 'dotnet test AnalogGameEngine.Tests /p:CollectCoverage=true /p:CoverletOutputFormat=\"json,opencover\" /p:Exclude="[*]*"'
+    - 'dotnet test AnalogGameEngine.Tests /p:CollectCoverage=true /p:CoverletOutputFormat=\"json,opencover\" /p:Exclude="[xunit.*]*"'
     # Check, if coverage report is empty
     - 'if [ "$(<AnalogGameEngine.Tests/coverage.json)" = "{}" ]; then exit 1; fi'
     # Upload to codecov
