change texture location, add playingcards, add console variant of MauMau

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,3 +40,7 @@ buildMauMau:
   stage: build_prototypes
   script:
     - 'dotnet build MauMauPrototype'
+buildMauMauConsole:
+  stage: build_prototypes
+  script:
+    - 'dotnet build MauMauConsolePrototype'
