--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,6 +12,16 @@
                 "reveal": "silent"
             },
             "problemMatcher": "$msCompile"
+        },
+        {
+            "label": "buildMauMauConsole",
+            "command": "dotnet build MauMauConsolePrototype",
+            "type": "shell",
+            "group": "build",
+            "presentation": {
+                "reveal": "silent"
+            },
+            "problemMatcher": "$msCompile"
         }
     ]
 }
