complete restructuring (gui does not run though)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,7 +15,7 @@
         },
         {
             "label": "buildMauMauConsole",
-            "command": "dotnet build MauMauConsolePrototype",
+            "command": "dotnet build MauMauPrototype.Console",
             "type": "shell",
             "group": "build",
             "presentation": {
