--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "buildMauMauConsole",
-            "program": "${workspaceRoot}/MauMauConsolePrototype/bin/Debug/netcoreapp2.2/MauMauConsolePrototype.dll",
+            "program": "${workspaceRoot}/MauMauPrototype.Console/bin/Debug/netcoreapp2.2/MauMauPrototype.Console.dll",
             "args": [],
             "cwd": "${workspaceRoot}",
             "stopAtEntry": false,
