Tidy up a bit and use net5.0 now

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "buildMauMau",
-            "program": "${workspaceRoot}/MauMauPrototype/bin/Debug/netcoreapp2.2/MauMauPrototype.dll",
+            "program": "${workspaceRoot}/MauMauPrototype/bin/Debug/net5.0/MauMauPrototype.dll",
             "args": [],
             "cwd": "${workspaceRoot}",
             "stopAtEntry": false,
@@ -17,7 +17,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "buildMauMauConsole",
-            "program": "${workspaceRoot}/MauMauPrototype.Console/bin/Debug/netcoreapp2.2/MauMauPrototype.Console.dll",
+            "program": "${workspaceRoot}/MauMauPrototype.Console/bin/Debug/net5.0/MauMauPrototype.Console.dll",
             "args": [],
             "cwd": "${workspaceRoot}",
             "stopAtEntry": false,
