--- a/AnalogGameEngine.SimpleGUI/AnalogGameEngine.SimpleGUI.csproj
+++ b/AnalogGameEngine.SimpleGUI/AnalogGameEngine.SimpleGUI.csproj
@@ -1,15 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>library</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>AnalogGameEngine.SimpleGUI</AssemblyName>
     <RootNamespace>AnalogGameEngine.SimpleGUI</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="OpenTK.NETCore" Version="*" />
-    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.2" />
+    <ProjectReference Include="..\AnalogGameEngine\AnalogGameEngine.fsproj" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AnalogGameEngine\AnalogGameEngine.csproj" />
-  </ItemGroup>
+  <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
