--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,7 +21,10 @@
         "Ionide.Ionide-fsharp",
     ],
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
-    // "forwardPorts": [],
+    "forwardPorts": [
+        5901,
+        6080
+    ],
     // Use 'postCreateCommand' to run commands after the container is created.
     "postCreateCommand": "dotnet tool restore && dotnet run restore-all",
     // Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
